--- a/projects/components/src/lib/text-input/text-input.component.html
+++ b/projects/components/src/lib/text-input/text-input.component.html
@@ -1,3 +1,4 @@
-<p>
-  text-input works!
-</p>
+<mat-form-field>
+  <input matInput [placeholder]="placeholder" [value]="value" (input)="valueChanged($event)" (focus)="focussed()" (blur)="blurred()"
+    [disabled]="disabled">
+</mat-form-field>
